fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -93,6 +93,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: var(--bg);
+  color: var(--textNormal);
 }
 
 a {
